fix-250: Prevent horizontal scrolling

--- a/backend/api/btb/templates/raw/styles.css
+++ b/backend/api/btb/templates/raw/styles.css
@@ -11,7 +11,6 @@ body, a, p, td {
 }
 
 .frame {
-    /* margin: 50px; */
     text-align: center;
     width: 100%;
 }
@@ -63,10 +62,7 @@ body, a, p, td {
     padding-top: 36px;
     color: #282323;
     line-height: 42px;
-    
     margin: 0;
-    margin-bottom: 0;
-    margin-bottom: 0;
 }
 
 .template p {
